# aiLine

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  forms_hack.txt
agents/: pyproject.toml
agents/ailine_agents/: __init__.py  deps.py  models.py  resilience.py
agents/ailine_agents/agents/: __init__.py  _prompts.py  _tool_bridge.py  executor.py  planner.py  quality_gate.py  skill_crafter.py  tutor.py
agents/ailine_agents/eval/: __init__.py  golden_sets.py  rubric.py  scoring.py
agents/ailine_agents/model_selection/: __init__.py  bridge.py  providers.py
agents/ailine_agents/skills/: __init__.py  accessibility_policy.py  composer.py  loader.py  registry.py  spec.py
agents/ailine_agents/workflows/: __init__.py  _executor_node.py  _node_shared.py  _plan_nodes.py  _planner_node.py  _quality_node.py  _retry.py  _scorecard_node.py  _skills_node.py  _sse_helpers.py  _state.py  _trace_capture.py  plan_workflow.py  tutor_workflow.py
agents/tests/: conftest.py  test_deps.py  test_eval_agents.py  test_eval_harness.py  test_executor_agent.py  test_live_agents.py  test_model_selection.py  test_models.py  test_plan_workflow.py  test_planner_agent.py  test_quality_gate_agent.py  test_resilience.py  test_retry.py  test_skill_composer.py  test_skill_registry.py  test_skills_workflow_node.py  test_tool_bridge.py  test_trace_capture.py  test_tutor_agent.py  test_tutor_workflow.py
runtime/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
runtime/ailine_runtime/: __main__.py  api_app.py  config.py  workflow_langgraph.py
runtime/ailine_runtime/accessibility/: __init__.py  braille_translator.py  caption_orchestrator.py  exports.py  gloss_translator.py  hard_constraints.py  profiles.py  rag_provenance.py  sign_language_registry.py  validator.py  validator_helpers.py
runtime/ailine_runtime/adapters/curriculum/: __init__.py  bncc_provider.py  loader.py  unified_provider.py  us_provider.py
runtime/ailine_runtime/adapters/db/: __init__.py  fake_skill_repository.py  models.py  repositories.py  session.py  skill_repository.py  unit_of_work.py  user_repository.py
runtime/ailine_runtime/adapters/embeddings/: __init__.py  fake_embeddings.py  gemini_embeddings.py  openai_embeddings.py
runtime/ailine_runtime/adapters/events/: inmemory_bus.py  redis_bus.py
runtime/ailine_runtime/adapters/llm/: anthropic_llm.py  fake_llm.py  gemini_llm.py  openai_llm.py  routing_types.py  smart_router.py
runtime/ailine_runtime/adapters/media/: __init__.py  elevenlabs_tts.py  fake_image_describer.py  fake_image_gen.py  fake_sign_recognition.py  fake_stt.py  fake_tts.py  gemini_image_gen.py  ocr_processor.py  openai_stt.py  sign_recognition.py  whisper_stt.py
runtime/ailine_runtime/adapters/tools/: fake_dispatcher.py
runtime/ailine_runtime/api/: app.py
runtime/ailine_runtime/app/: authz.py  cost_guard.py  token_counter.py
runtime/ailine_runtime/domain/: exceptions.py
runtime/ailine_runtime/materials/: __init__.py  store.py
runtime/ailine_runtime/ml/: __init__.py  decoder.py  export.py  features.py  model.py  vocabulary.py
runtime/ailine_runtime/shared/: audit.py  config.py  container.py  container_adapters.py  errors.py  i18n.py  jwt_dev_secret.py  metrics.py  observability.py  observability_store.py  progress_store.py  prompt_defense.py  rag_diagnostics_store.py  review_store.py  sanitize.py  tenant.py  trace_store.py  tracing.py
runtime/ailine_runtime/skills/: __init__.py  paths.py
runtime/ailine_runtime/tools/: __init__.py  adapters_langchain.py  registry.py
runtime/ailine_runtime/tutoring/: __init__.py  builder.py  models.py  playbooks.py  session.py
runtime/ailine_runtime/workflow/: __init__.py  plan_workflow.py  tutor_workflow.py
runtime/scripts/: seed_demo.py
runtime/tests/: conftest.py  test_accessibility_captioning.py  test_accessibility_profiles.py  test_ai_receipt.py  test_api_health.py  test_api_materials.py  test_api_plans.py  test_api_progress.py  test_api_review.py  test_api_tutor_transcript.py  test_api_tutors.py  test_auth_endpoints.py  test_authz_negative.py  test_backend_polish.py  test_base_repository.py  test_braille_translator.py  test_chroma_store.py  test_config_extended.py  test_container_elevenlabs_sign.py  test_container_extended.py  test_container_lifecycle.py  test_container_typed_fields.py  test_cost_guard.py  test_curriculum.py  test_db_models.py  test_db_pool_config.py  test_db_session.py  test_db_uow.py  test_demo.py  test_demo_mode_middleware.py  test_diagnostics.py  test_domain_entities.py  test_elevenlabs_tts.py  test_embeddings.py  test_error_handler.py  test_exports.py  test_fake_llm.py  test_fake_llm_scenarios.py  test_fake_tool_dispatcher.py  test_gemini_embeddings.py  (+68 more)
runtime/tests/test_ml/: test_augment.py  test_dataset.py  test_decoder.py  test_export.py  test_features.py  test_model.py  test_model_extended.py  test_train.py  test_vocabulary.py
(+695 files in other folders)
