[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ailine-runtime"
version = "0.1.0"
description = "AiLine — Adaptive Inclusive Learning runtime (Pydantic AI + LangGraph agents)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pydantic-ai>=1.58.0,<2",
  "deepagents==0.4.1",
  "langgraph==1.0.8",
  "langchain-anthropic>=1.3.2,<2",
  "langchain-core>=1.2.10,<2",
  "anthropic>=0.79.0,<1",
  "fastapi==0.129.0",
  "uvicorn[standard]==0.40.0",
  "sse-starlette==3.2.0",
  "httpx>=0.28,<1",
  "tenacity>=9,<10",
  "structlog>=24,<26",
  "numpy>=1.26,<3",
  "ailine-agents>=0.1.0",
  "PyJWT[crypto]>=2.9,<3",
]

[tool.uv.sources]
ailine-agents = { path = "../agents", editable = true }

[project.optional-dependencies]
db = [
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "alembic>=1.18,<2",
  "asyncpg>=0.30,<1",
  "pgvector>=0.3.6,<1",
  "uuid-utils>=0.10,<1",
]
sqlite = ["aiosqlite>=0.20,<1"]
mysql = ["asyncmy>=0.2.9,<1"]
embeddings-gemini = ["google-genai>=1.0,<2"]
embeddings-openai = ["openai>=2.11,<3"]
embeddings-local = ["sentence-transformers>=3.4,<4"]
vectorstore-chroma = ["chromadb>=0.6,<1"]
vectorstore-qdrant = ["qdrant-client>=1.12,<2"]
media = [
  "openai>=2.11,<3",
  "mediapipe>=0.10,<1",
  "pytesseract>=0.3,<1",
]
redis = ["arq>=0.26,<1"]
otel = [
  "opentelemetry-api>=1.29,<2",
  "opentelemetry-sdk>=1.29,<2",
  "opentelemetry-instrumentation-fastapi>=0.50b0,<1",
  "opentelemetry-instrumentation-sqlalchemy>=0.50b0,<1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.29,<2",
]
all = [
  "ailine-runtime[db,embeddings-gemini,embeddings-openai,media,redis,otel]",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=6,<7",
  "httpx>=0.28,<1",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "aiosqlite>=0.20,<1",
  "uuid-utils>=0.10,<1",
  "sqlalchemy[asyncio]>=2.0.36,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["ailine_runtime"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "live_llm: marks tests that require real LLM API keys (deselect with '-m \"not live_llm\"')",
  "timeout: marks test timeout in seconds (requires pytest-timeout plugin for enforcement)",
]

[tool.coverage.run]
source = ["ailine_runtime"]
omit = [
  "ailine_runtime/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__",
  "if TYPE_CHECKING",
]
