[project]
name = "contextkit"
version = "0.2.0"
description = "Reference implementation for X/Y context budgets, rolling summaries, skills, MCP, RAG evidence packs, and memory."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Generated reference (user requested)"}]

[project.optional-dependencies]
tokenizer = ["tiktoken>=0.7.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
